# local-meeting-assistant

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
backend/: db.py  main.py  pyproject.toml
backend/routers/: chat.py  rag.py  sessions.py  transcription.py
backend/services/: llm.py  rag.py  transcriber.py
docs/: plan.md
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/chat/: route.ts
frontend/src/app/chat/: page.tsx
frontend/src/app/record/: page.tsx
frontend/src/app/sessions/[id]/: page.tsx
frontend/src/components/: Sidebar.tsx  StatusBar.tsx
scripts/: reindex.py  setup_models.py
src/: config.py  main.py
src/api/: main.py  schemas.py
src/audio/: capture.py  transcriber.py  vad.py
src/db/: connection.py  llm_settings.py  migrations.py  repository.py  schema.py
src/domain/: __init__.py  session_types.py
src/indexing/: chunker.py  embedder.py  pipeline.py  vector_store.py
src/rag/: chat_service.py  context_builder.py  llm.py  retriever.py
src/services/: __init__.py  session_service.py
src/system/: __init__.py  health.py
src/ui/: app.py
src/ui/screens/: chat.py  home.py  recording.py  transcript.py
src/ui/widgets/: chat_panel.py  meeting_list.py  transcript_log.py
tests/: test_api.py  test_audio.py  test_chunker.py  test_context_builder.py  test_db.py
web/: AGENTS.md  package-lock.json  package.json  vite.config.ts
web/.cursor/nqui-skills/: SKILL.md  design-system.md
web/.cursor/nqui-skills/rules/: composition.md  forms.md  icons.md  styling.md
web/.cursor/rules/: nqui-components.mdc
web/.cursor/skills/nqui-components/: SKILL.md
web/.cursor/skills/nqui-install/: SKILL.md
web/nqui/: index.css  nqui-setup.css
web/src/: App.tsx  api.ts  index.css  main.tsx  types.ts
web/src/components/: ChatLlmSettingsDialog.tsx  ChatThread.tsx  FloatingChatPanel.tsx
web/src/pages/: ChatPage.tsx  SessionsPage.tsx  TranscriptPage.tsx
