[project]
name = "local-meeting-assistant-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "mlx-audio>=0.4.1",
    "mlx-lm>=0.21",
    "httpx>=0.27",
]

[project.scripts]
serve = "backend.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
